@@ -22,6 +22,7 @@
 #ifndef DPENGINE_FLOOD_FILL_H
 #define DPENGINE_FLOOD_FILL_H
 #include "pixels.h"
+#include "view_mode.h"
 #include <dpcommon/common.h>
 
 typedef struct DP_CanvasState DP_CanvasState;
@@ -40,8 +41,9 @@ typedef bool (*DP_FloodFillShouldCancelFn)(void *user);
 DP_FloodFillResult
 DP_flood_fill(DP_CanvasState *cs, int x, int y, DP_UPixelFloat fill_color,
               double tolerance, int layer_id, int size, int gap, int expand,
-              int feather_radius, DP_Image **out_img, int *out_x, int *out_y,
-              DP_FloodFillShouldCancelFn should_cancel, void *user);
+              int feather_radius, DP_ViewMode view_mode, int active_layer_id,
+              int active_frame_index, DP_Image **out_img, int *out_x,
+              int *out_y, DP_FloodFillShouldCancelFn should_cancel, void *user);
 
 
 #endif
